--- a/smart-exchange-frnt/angular.json
+++ b/smart-exchange-frnt/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/material-icons-font/material-icons-font.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.sass"
             ],
