--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular-notifier": "^13.0.0",
     "material-icons-font": "^2.1.0",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.8.0",
