--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "angular-notifier": "^13.0.0",
+    "jwt-decode": "^4.0.0",
     "material-icons-font": "^2.1.0",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.8.0",
