--- a/smart-exchange-frnt/angular.json
+++ b/smart-exchange-frnt/angular.json
@@ -32,6 +32,7 @@
             "styles": [
               "./node_modules/material-icons-font/material-icons-font.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/theme.scss",
               "src/styles.sass"
             ],
             "scripts": []
