--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "angular-notifier": "^13.0.0",
     "jwt-decode": "^4.0.0",
     "material-icons-font": "^2.1.0",
+    "moment": "^2.29.4",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
