--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "angular-notifier": "^13.0.0",
     "jwt-decode": "^4.0.0",
     "material-icons-font": "^2.1.0",
     "moment": "^2.29.4",
     "ng-recaptcha": "^11.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -35,6 +37,7 @@
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
