--- a/smart-exchange-back/src/main/resources/aplication.properties
+++ b/smart-exchange-back/src/main/resources/aplication.properties
@@ -1,1 +1,8 @@
+# Establece el tamaño máximo de la solicitud en 15 MB para manejar imágenes base64 de hasta 10 MB
+#server.tomcat.max-http-post-size=15728640  # 15 MB
 
+# Para cargas de archivos, si también las usas
+#spring.servlet.multipart.max-file-size=15728640  # 15 MB
+#spring.servlet.multipart.max-request-size=15728640  # 15 MB
+
+spring.cloud.config.enabled=false
