--- a/smart-exchange-back/src/main/resources/aplication.properties
+++ b/smart-exchange-back/src/main/resources/aplication.properties
@@ -4,5 +4,7 @@
 # Para cargas de archivos, si también las usas
 #spring.servlet.multipart.max-file-size=15728640  # 15 MB
 #spring.servlet.multipart.max-request-size=15728640  # 15 MB
-
-spring.cloud.config.enabled=false
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=h4ckm3
+#server.ssl.key-alias=exchange
