--- a/smart-exchange-back/src/main/resources/application.yml
+++ b/smart-exchange-back/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
   port: 8050
 spring:
   application:
-    name: account-manager
+    name: smart-exchange
   datasource:
     url: jdbc:postgresql://localhost:5432/smart-exchange
     username: postgres
