--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.4",
     "ng-recaptcha": "^11.0.0",
     "ngx-image-zoom": "^3.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
