--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@stomp/stompjs": "^7.0.0",
+    "angular-animations": "^0.11.0",
     "angular-notifier": "^13.0.0",
     "jwt-decode": "^4.0.0",
     "material-icons-font": "^2.1.0",
