--- a/smart-exchange-db/liquibase.properties
+++ b/smart-exchange-db/liquibase.properties
@@ -1,7 +1,7 @@
-#url=jdbc:postgresql://localhost:5432/smart-exchange
-#username=postgres
-url=jdbc:postgresql://ec2-3-149-255-154.us-east-2.compute.amazonaws.com:5432/smart_exchange
-username=ramiro  
+url=jdbc:postgresql://localhost:5432/smart-exchange
+username=postgres
+#url=jdbc:postgresql://ec2-3-149-255-154.us-east-2.compute.amazonaws.com:5432/smart_exchange
+#username=ramiro
 password=h4ckm3
 changeLogFile=master.xml
 driver=org.postgresql.Driver
