--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -30,9 +30,12 @@
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -49,6 +52,7 @@
     "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
