--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -14,10 +14,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.2",
+    "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
     "@angular/forms": "^17.0.2",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
@@ -33,6 +35,7 @@
     "@stomp/stompjs": "^7.0.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
+    "material-icons-font": "^2.1.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
