--- a/smart-exchange-movil/angular.json
+++ b/smart-exchange-movil/angular.json
@@ -34,6 +34,7 @@
             "styles": [
               "./node_modules/material-icons-font/material-icons-font.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/theme/theme.scss",
               "src/theme/variables.scss",
               "src/global.scss"
             ],
