--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
