--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -26,7 +26,9 @@
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.9",
+    "@capacitor/clipboard": "^5.0.7",
     "@capacitor/core": "5.6.0",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
     "@capacitor/network": "^5.0.7",
