--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/fingerprint-aio": "^6.6.0",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.9",
@@ -36,6 +37,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@stomp/stompjs": "^7.0.0",
+    "cordova-plugin-fingerprint-aio": "^5.0.1",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "material-icons-font": "^2.1.0",
