--- a/smart-exchange-movil/android/app/capacitor.build.gradle
+++ b/smart-exchange-movil/android/app/capacitor.build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation project(':capacitor-network')
     implementation project(':capacitor-preferences')
     implementation project(':capacitor-status-bar')
+    implementation project(':capawesome-capacitor-screen-orientation')
 
 }
 apply from: "../../node_modules/cordova-plugin-fingerprint-aio/src/android/build.gradle"
