--- a/smart-exchange-movil/package.json
+++ b/smart-exchange-movil/package.json
@@ -35,6 +35,7 @@
     "@capacitor/network": "^5.0.7",
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
+    "@capawesome/capacitor-screen-orientation": "^5.0.1",
     "@ionic/angular": "^7.0.0",
     "@stomp/stompjs": "^7.0.0",
     "cordova-plugin-fingerprint-aio": "^5.0.1",
