--- a/smart-exchange-back/src/main/resources/application.yml
+++ b/smart-exchange-back/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 #  port: 443
 #  ssl:
 #    key-store-type: PKCS12
-#    key-store: classpath:certificado_smartExchange.p12
-#    key-store-password: hackme
-#    key-alias: exchange
+#    key-store: classpath:keystore-artilugioproductions.p12
+#    key-store-password: h4ckm3
+#    key-alias: artilugioproductions.com
 server:
   port: 8050
 spring:
