--- a/smart-exchange-frnt/package.json
+++ b/smart-exchange-frnt/package.json
@@ -34,6 +34,7 @@
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
