--- a/smart-exchange-db/liquibase.properties
+++ b/smart-exchange-db/liquibase.properties
@@ -1,10 +1,8 @@
-url=jdbc:postgresql://localhost:5432/smart-exchange
-username=postgres
-#url=jdbc:postgresql://18.221.60.127:5432/smart_exchange
-#username=ramiro
-password=h4ckm3
-#url=jdbc:postgresql://209.38.133.89:5432/smart_exchange
-#username=lcexchange
-#password=Lc-3xch4ng32024.
+#url=jdbc:postgresql://localhost:5432/smart-exchange
+#username=postgres
+#password=h4ckm3
+url=jdbc:postgresql://209.38.133.89:5432/smart_exchange
+username=lcexchange
+password=Lc-3xch4ng32024.
 changeLogFile=master.xml
 driver=org.postgresql.Driver
